--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,32 @@
-<html>
-	<body>
-		<h1>Hello World</h1>
-	</body>
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="htmx-config" content='{"selfRequestsOnly":true}'>
+    <title>alreadyread</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Navbar-With-Button-icons.css">
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar navbar-expand-md py-3 navbar-light">
+            <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span>alreadyread</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"><a class="nav-link" data-hx-get="/bookmarks?filter=new"        data-hx-target="#links-table">New</a></li>
+                        <li class="nav-item"><a class="nav-link" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#links-table">Duplicated</a></li>
+                        <li class="nav-item"><a class="nav-link" data-hx-get="/bookmarks"                   data-hx-target="#links-table">All</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div id="links-table" class="table-responsive" hx-get="/bookmarks?filter=new" hx-trigger="load"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+</body>
+
 </html>
