--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,9 @@
                 </div>
             </div>
         </nav>
-        <div id="links-table" class="table-responsive" hx-get="/bookmarks?filter=new" hx-trigger="load"></div>
+        <div id="links-table" class="table-responsive" hx-get="/bookmarks?filter=new" hx-trigger="load">
+
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
