--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,19 +13,26 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-md py-3 navbar-light">
-            <div class="container"><a class="navbar-brand d-flex align-items-center" href="#"><span>alreadyread</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container">
+                <a class="navbar-brand d-flex align-items-center" href="#"><span>alreadyread</span></a>
+                <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link active" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=new"        data-hx-target="#links-table">New</a></li>
-                        <li class="nav-item"><a class="nav-link"        data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#links-table">Duplicated</a></li>
-                        <li class="nav-item"><a class="nav-link"        data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks"                   data-hx-target="#links-table">All</a></li>
+                        <li class="nav-item"><a class="nav-link active" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=new" data-hx-target="#links-table-container">Inbox</a> </li>
+                        <li class="nav-item"><a class="nav-link" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#links-table-container">Duplicated</a></li>
+                        <li class="nav-item"><a class="nav-link" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks" data-hx-target="#links-table-container">All</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div id="links-table" class="table-responsive" hx-get="/bookmarks?filter=new" hx-trigger="load">
-
-        </div>
+        <form data-hx-target="#links-table-body" data-hx-post="/bookmarks/" data-hx-trigger="submit" data-hx-swap="afterbegin" data-hx-on::after-request="if(event.detail.successful && event.detail.pathInfo.requestPath=='/bookmarks/') { this.reset(); }">
+            <div class="form-group row">
+                <input type="text" name="url"   placeholder="URL"   class="form-control w-25" id="new-link-URL" data-hx-post="/urlTitle" data-hx-swap="none" data-hx-trigger="keyup changed delay:500ms" data-hx-on::after-request="document.getElementById('new-link-title').value = event.detail.xhr.response">
+                <input type="text" name="title" placeholder="Title" class="form-control w-25" id="new-link-title">
+                <button class="btn btn-primary" type="submit" class="form-control w-25">Add</button>
+            </div>
+        </form>
+        <div id="links-table-container" class="table-responsive" data-hx-get="/bookmarks?filter=new" data-hx-trigger="load"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
