--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,43 +4,73 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="htmx-config" content='{"selfRequestsOnly":true}'>
     <title>alreadyread</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Navbar-With-Button-icons.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=97380e22c8933e9aa79cbc2390b9f15a">
+    <link rel="stylesheet" href="assets/css/Nunito.css?h=b3cfb95fea31989a2602fdef83b8a89a">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 </head>
 
-<body>
-    <div class="container">
-        <nav class="navbar navbar-expand-md py-3 navbar-light">
-            <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="#"><span>alreadyread</span></a>
-                <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link active" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=new" data-hx-target="#links-table-container">Inbox</a> </li>
-                        <li class="nav-item"><a class="nav-link" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#links-table-container">Duplicated</a></li>
-                        <li class="nav-item"><a class="nav-link" data-hx-on::before-request="(function(_this) {document.querySelectorAll('.nav-link').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks" data-hx-target="#links-table-container">All</a></li>
-                    </ul>
+<body id="page-top">
+    <div id="wrapper">
+        <div class="d-flex flex-column" id="content-wrapper">
+            <div id="content">
+                <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
+                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button><a class="navbar-brand" href="#">alreadyread</a>
+
+                        <button class="btn btn-primary btn-sm" type="button" style="margin-right: 20px;" data-hx-get="/newLink" data-hx-target="#dialog-card">New</button>
+
+                        <div class="btn-group btn-group-sm" role="group" id="filter-group">
+                            <button class="btn btn-secondary active" type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group.button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=new"        data-hx-target="#links-table-container">Inbox</button>
+                            <button class="btn btn-secondary"        type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group.button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#links-table-container">Duplicated</button>
+                            <button class="btn btn-secondary"        type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group.button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks"                   data-hx-target="#links-table-container">All</button>
+
+                        </div>
+                        <form id="link-search" class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
+                            <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..."><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
+                        </form>
+                        <ul class="navbar-nav flex-nowrap ms-auto">
+                            <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
+                                <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
+                                    <form class="me-auto navbar-search w-100">
+                                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ...">
+                                            <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                <div class="container-fluid">
+                    <div id="dialog-card"></div>
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                                <table class="table my-0" id="dataTable">
+                                    <thead>
+                                        <tr>
+                                            <th>Title</th>
+                                            <th>URL</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="links-table-container" data-hx-get="/bookmarks?filter=new" data-hx-trigger="load">
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-        <form data-hx-target="#links-table-body" data-hx-post="/bookmarks/" data-hx-trigger="submit" data-hx-swap="afterbegin" data-hx-on::after-request="if(event.detail.successful && event.detail.pathInfo.requestPath=='/bookmarks/') { this.reset(); }">
-            <div class="form-group row">
-                <div class="col-auto">
-                    <input type="text" name="url"   placeholder="URL"   class="" id="new-link-URL" data-hx-post="/urlTitle" data-hx-swap="none" data-hx-trigger="keyup changed delay:500ms" data-hx-on::after-request="document.getElementById('new-link-title').value = event.detail.xhr.response">
+            <footer class="bg-white sticky-footer">
+                <div class="container my-auto">
+                    <div class="text-center my-auto copyright"><span>Copyright © cirello.io/alreadyread 2023</span></div>
                 </div>
-                <div class="col-3">
-                    <input type="text" name="title" placeholder="Title" class="" id="new-link-title">
-                </div>
-                <div class="col-3">
-                    <button class="btn btn-primary" type="submit" class="">Add</button>
-                </div>
-            </div>
-        </form>
-        <div id="links-table-container" class="table-responsive" data-hx-get="/bookmarks?filter=new" data-hx-trigger="load"></div>
+            </footer>
+        </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/theme.js?h=79f403485707cf2617c5bc5a2d386bb0"></script>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 </body>
 
