--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,12 +17,12 @@
                 <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button><a class="navbar-brand" href="#">alreadyread</a>
 
-                        <button class="btn btn-primary btn-sm" type="button" style="margin-right: 20px;" data-hx-get="/newLink" data-hx-target="#dialog-card">New</button>
+                        <button class="btn btn-primary btn-sm" type="button" style="margin-right: 20px;" data-hx-get="/newLink" data-hx-target="#container" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)">New</button>
 
                         <div class="btn-group btn-group-sm" role="group" id="filter-group">
-                            <button class="btn btn-secondary active" type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=new"        data-hx-target="#links-table-container">Inbox</button>
-                            <button class="btn btn-secondary"        type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#links-table-container">Duplicated</button>
-                            <button class="btn btn-secondary"        type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks"                   data-hx-target="#links-table-container">All</button>
+                            <button class="btn btn-secondary active" id="inbox-btn"      type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=new"        data-hx-target="#container">Inbox</button>
+                            <button class="btn btn-secondary"        id="duplicated-btn" type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks?filter=duplicated" data-hx-target="#container">Duplicated</button>
+                            <button class="btn btn-secondary"        id="all-btn"        type="button" data-hx-on::before-request="(function(_this) {document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') }); _this.classList.add('active');})(this)" data-hx-get="/bookmarks"                   data-hx-target="#container">All</button>
 
                         </div>
                         <form id="link-search" class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
@@ -41,25 +41,8 @@
                         </ul>
                     </div>
                 </nav>
-                <div class="container-fluid">
-                    <div id="dialog-card"></div>
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
-                                    <thead>
-                                        <tr>
-                                            <th>Title</th>
-                                            <th>URL</th>
-                                            <th>Actions</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="links-table-container" data-hx-get="/bookmarks?filter=new" data-hx-trigger="load">
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
+                <div class="container-fluid" >
+                    <div id="container" class="card" data-hx-get="/bookmarks?filter=new" data-hx-trigger="load"></div>
                 </div>
             </div>
             <footer class="bg-white sticky-footer">
