alreadyread: prevent search form to be submitted

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,13 +25,13 @@
                             <button class="btn btn-secondary"        id="all-btn"        type="button" data-hx-on::before-request="resetButtons(this)" data-hx-get="/all"        data-hx-target="#container">All</button>
 
                         </div>
-                        <form id="link-search" class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search">
+                        <form id="link-search" class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search" data-hx-trigger="submit" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">
                             <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." data-hx-trigger="keyup changed delay:500ms" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)"></div>
                         </form>
                         <ul class="navbar-nav flex-nowrap ms-auto">
                             <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
                                 <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
-                                    <form class="me-auto navbar-search w-100">
+                                    <form class="me-auto navbar-search w-100" data-hx-trigger="submit" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">
                                         <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." data-hx-trigger="keyup changed delay:500ms" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)"></div>
                                     </form>
                                 </div>
