--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,43 +4,50 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>alreadyread</title>
+    <title>Table - Brand</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=97380e22c8933e9aa79cbc2390b9f15a">
-    <link rel="stylesheet" href="assets/css/Nunito.css?h=b3cfb95fea31989a2602fdef83b8a89a">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 </head>
 
 <body id="page-top">
     <div id="wrapper">
+        <nav class="navbar align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0 navbar-dark">
+            <div class="container-fluid d-flex flex-column p-0">
+                <a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0 d-none d-lg-block" href="#">
+                    <div class="sidebar-brand-text mx-3"><span>ALREADYREAD</span></div>
+                </a>
+                <ul class="navbar-nav text-light" id="accordionSidebar" role="button">
+                    <li class="nav-item"><a class="nav-link" data-hx-on::before-request="resetButtons(this)" data-hx-get="/inbox"      data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" style="margin-top: -3px; margin-right: 3px"> <path d="M0 0h24v24H0V0z" fill="none"></path> <path d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"></path> </svg><span>Inbox</span></a></li>
+                    <li class="nav-item"><a class="nav-link" data-hx-on::before-request="resetButtons(this)" data-hx-get="/duplicated" data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" style="margin-top: -3px; margin-right: 3px"> <path d="M0 0h24v24H0z" fill="none"></path> <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"></path> </svg><span>Duplicated</span></a></li>
+                    <li class="nav-item"><a class="nav-link" data-hx-on::before-request="resetButtons(this)" data-hx-get="/dead"       data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" style="margin-top: -3px; margin-right: 3px"> <path d="M0 0h24v24H0z" fill="none"></path> <path d="M17.73 12.02l3.98-3.98c.39-.39.39-1.02 0-1.41l-4.34-4.34c-.39-.39-1.02-.39-1.41 0l-3.98 3.98L8 2.29C7.8 2.1 7.55 2 7.29 2c-.25 0-.51.1-.7.29L2.25 6.63c-.39.39-.39 1.02 0 1.41l3.98 3.98L2.25 16c-.39.39-.39 1.02 0 1.41l4.34 4.34c.39.39 1.02.39 1.41 0l3.98-3.98 3.98 3.98c.2.2.45.29.71.29.26 0 .51-.1.71-.29l4.34-4.34c.39-.39.39-1.02 0-1.41l-3.99-3.98zM12 9c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm-4.71 1.96L3.66 7.34l3.63-3.63 3.62 3.62-3.62 3.63zM10 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 2c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2-4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2.66 9.34l-3.63-3.62 3.63-3.63 3.62 3.62-3.62 3.63z"></path> </svg><span>Dead</span></a></li>
+                    <li class="nav-item"><a class="nav-link" data-hx-on::before-request="resetButtons(this)" data-hx-get="/all"        data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" style="margin-top: -3px; margin-right: 3px"> <path d="M0 0h24v24H0V0z" fill="none"></path> <path d="M10 10.02h5V21h-5zM17 21h3c1.1 0 2-.9 2-2v-9h-5v11zm3-18H5c-1.1 0-2 .9-2 2v3h19V5c0-1.1-.9-2-2-2zM3 19c0 1.1.9 2 2 2h3V10H3v9z"></path> </svg><span>All</span></a></li>
+                </ul>
+                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
+            </div>
+        </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
                 <nav class="navbar navbar-expand bg-white shadow mb-4 topbar static-top navbar-light">
-                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button><a class="navbar-brand" href="#">alreadyread</a>
-
+                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <button class="btn btn-primary btn-sm" type="button" style="margin-right: 20px;" data-hx-get="/post" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">New</button>
-
-                        <div class="btn-group btn-group-sm" role="group" id="filter-group">
-                            <button class="btn btn-secondary active" id="inbox-btn"      type="button" data-hx-on::before-request="resetButtons(this)" data-hx-get="/inbox"      data-hx-target="#container">Inbox</button>
-                            <button class="btn btn-secondary"        id="duplicated-btn" type="button" data-hx-on::before-request="resetButtons(this)" data-hx-get="/duplicated" data-hx-target="#container">Duplicated</button>
-                            <button class="btn btn-secondary"        id="stale-btn"      type="button" data-hx-on::before-request="resetButtons(this)" data-hx-get="/dead"      data-hx-target="#container">Dead</button>
-                            <button class="btn btn-secondary"        id="all-btn"        type="button" data-hx-on::before-request="resetButtons(this)" data-hx-get="/all"        data-hx-target="#container">All</button>
-
-                        </div>
-                        <form id="link-search" class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search" data-hx-trigger="submit" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">
+                        <form class="d-none d-sm-inline-block me-auto ms-md-3 my-2 my-md-0 mw-100 navbar-search" data-hx-trigger="submit" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">
                             <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." data-hx-trigger="keyup changed delay:500ms" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)"></div>
                         </form>
                         <ul class="navbar-nav flex-nowrap ms-auto">
                             <li class="nav-item dropdown d-sm-none no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-search"></i></a>
                                 <div class="dropdown-menu dropdown-menu-end p-3 animated--grow-in" aria-labelledby="searchDropdown">
                                     <form class="me-auto navbar-search w-100" data-hx-trigger="submit" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">
-                                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." data-hx-trigger="keyup changed delay:500ms" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)"></div>
+                                        <div class="input-group"><input class="bg-light form-control border-0 small" type="text" placeholder="Search for ..." data-hx-trigger="keyup changed delay:500ms" data-hx-get="/search" name="term" data-hx-target="#container" data-hx-on::before-request="resetButtons(this)">
+                                            <div class="input-group-append"><button class="btn btn-primary py-0" type="button"><i class="fas fa-search"></i></button></div>
+                                        </div>
                                     </form>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </nav>
-                <div class="container-fluid" >
+                <div class="container-fluid">
                     <div id="container" class="card" {{- if not .Container }} data-hx-get="/inbox" data-hx-trigger="load"{{ end -}}>
                         {{ .Container }}
                     </div>
@@ -56,11 +63,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/theme.js?h=79f403485707cf2617c5bc5a2d386bb0"></script>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <script>
+        function resetButtons(_this) {
+            document.querySelectorAll('#accordionSidebar a').forEach(function(n){ n.classList.remove('active') });
+            _this.classList.add('active');
+        }
+    </script>
 </body>
-<script>
-function resetButtons(_this) {
-    document.querySelectorAll('#filter-group button').forEach(function(n){ n.classList.remove('active') });
-    _this.classList.add('active');
-}
-</script>
 </html>
