--- a/frontend/linkTable.html
+++ b/frontend/linkTable.html
@@ -12,7 +12,8 @@
 			<button class="btn btn-link text-reset text-decoration-none p-lg-0" data-hx-target="#bookmark-{{.ID}}" data-hx-patch="/bookmarks/{{.ID}}" name="inbox" value="read"     ><svg style="margin-top: -3px;" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor"> <g> <rect fill="none" height="24" width="24" x="0"></rect> <path d="M12,19c0-3.87,3.13-7,7-7c1.08,0,2.09,0.25,3,0.68V6c0-1.1-0.9-2-2-2H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h8.08 C12.03,19.67,12,19.34,12,19z M4,6l8,5l8-5v2l-8,5L4,8V6z M17.34,22l-3.54-3.54l1.41-1.41l2.12,2.12l4.24-4.24L23,16.34L17.34,22z"></path> </g> </svg></button>
 		</div>
 		<a href="{{.URL}}" title="{{ .Title }}" target="_blank" rel="noopener noreferrer" class="text-reset text-decoration-none">{{ .Title }}</a>
-		<i class="small">{{ .CreatedAt | prettyTime}}</i><br/>
+		<span class="d-none d-md-inline"><i class="small">{{ .CreatedAt | prettyTime}}</i><br/></span>
+		<div class="d-md-none"><i class="small">{{ .CreatedAt | prettyTime}}</i></div>
 		<a href="{{.URL}}" target="_blank" rel="noopener noreferrer" class="small">{{ .URL }}</a>
 		{{ if not (or (eq .LastStatusCode 200) (eq .LastStatusCode 0)) }}<span class="small">⚠️ {{.LastStatusCode}} {{.LastStatusCode | httpStatusCode}}</span>{{ end }}
 	</td>
