--- a/frontend/newLink.html
+++ b/frontend/newLink.html
@@ -3,6 +3,7 @@
 	<div class="card-body">
 		<div class="table-responsive table mt-2" id="dataTable" role="grid" aria-describedby="dataTable_info">
 			<form>
+			<input type="hidden" name="title" value="true">
 			<table class="table my-0" id="dataTable">
 			<tbody>
 				<tr>
@@ -12,7 +13,7 @@
 				<tr>
 				<td>
 					<input type="text" placeholder="Site Title" name="title" id="new-link-title" value="{{- .Title -}}">
-					<button class="btn btn-primary" data-hx-get="/post" data-hx-include="[name='url']" data-hx-target="#container">fetch title</button>
+					<button class="btn btn-primary" data-hx-get="/post" data-hx-include="[name='url'],[name='title']" data-hx-target="#container">fetch title</button>
 				</td>
 				</tr>
 
