alreadyread: fix title on first load

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
                 <li>
                     <hgroup>
                         <h1>ALREADYREAD</h1>
-                        <h2 id="header-page-name">Inbox</h2>
+                        <h2 id="header-page-name">{{ .HeaderPageName }}</h2>
                     </hgroup>
                 </li>
             </ul>
