alreadyread: fix title link back to home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li>
                     <hgroup>
-                        <h1>ALREADYREAD</h1>
+                        <h1><a href="/" hx-boost="true" class="contrast">ALREADYREAD</a></h1>
                         <h2 id="header-page-name">{{ .HeaderPageName }}</h2>
                     </hgroup>
                 </li>
